Style: fix programline wrong color

--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ QFrame#line {
 }
 
 QFrame#programline {
-    background-color:#3a3a3a;
+    background-color:#454545;
 }
 
 QFrame#view {
